--- a/web/css/index.css
+++ b/web/css/index.css
@@ -57,6 +57,7 @@ body {
 
 .search {
     display: flex;
+    flex-direction: row;
     align-items: center;
     border-radius: 30px;
     overflow: hidden;
@@ -84,6 +85,8 @@ body {
     padding-right: 12px;
     display: flex;
     align-items: center;
+    border: none;
+    outline: inherit;
     border-radius: 0 30px 30px 0;
 }
 
